tests/traci/set_variable/Vehicle/ChangeTarget/InvalidEdgeId/fcd.traci
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2026-03-14T17:58:55.005071+01:00 by Eclipse SUMO sumo v1_26_0+0596-598a13ff2c9
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<sumoConfiguration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <fcd-output value="fcd.xml"/>
        <fcd-output.attributes value="speed,pos,lane"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="42189"/>
    </traci_server>

</sumoConfiguration>
-->

<fcd-export xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/fcd_file.xsd">
    <timestep time="0.00">
        <vehicle id="veh0" speed="0.00" pos="0.00" lane="e_m5_0"/>
    </timestep>
    <timestep time="1.00">
        <vehicle id="veh0" speed="0.60" pos="0.60" lane="e_m5_0"/>
    </timestep>
    <timestep time="2.00">
        <vehicle id="veh0" speed="1.37" pos="1.97" lane="e_m5_0"/>
    </timestep>
</fcd-export>
